--- a/MyDoll.kv
+++ b/MyDoll.kv
@@ -802,6 +802,56 @@
                                                     if editar_subproduto_nome.text != "" and editar_subproduto_quantidade.text != "": gerenciador_subprodutos.current = "mostrar subprodutos"
                                                     if editar_subproduto_nome.text != "" and editar_subproduto_quantidade.text != "": scroll_subprodutos.editar_subproduto(editar_subproduto_imagem.source, editar_subproduto_nome.text, editar_subproduto_quantidade.text)
 
+                                Screen:
+                                    name: "imagens subprodutos"
+                                    BoxLayout:
+                                        ScrollView:
+                                            bar_color: 0, 0, 0, 0
+                                            Scroll_imagens_subprodutos:
+                                                orientation: 'vertical'
+                                                spacing: 30
+                                                padding: 30
+                                                size_hint_y: None
+                                                height: self.minimum_height
+                                                id: scroll_imagens_subprodutos
+
+                                                Button:
+                                                    size_hint: None, None
+                                                    height: 150
+                                                    on_release: scroll_imagens_subprodutos.copiar_todas_as_imagens()
+                                                    bold: True
+                                                    width: self.parent.width - self.parent.padding[0] * 2
+                                                    x: 0
+                                                    text: "Copiar imagens"
+                                                    background_color: (0, 0, 0, 0)
+                                                    color: (1, 1, 1, 1)
+                                                    font_size: 80
+                                                    canvas.before:
+                                                        Color:
+                                                            rgba: (1, .29, .655, 1) if self.state=='normal' else (.9, .1, .4, 1)
+                                                        RoundedRectangle:
+                                                            pos: self.pos
+                                                            size: self.size
+                                                            radius: [30,]
+
+                                                Button:
+                                                    size_hint: None, None
+                                                    height: 150
+                                                    on_release: app.root.file_chooser("imagens subprodutos")
+                                                    bold: True
+                                                    width: self.parent.width - self.parent.padding[0] * 2
+                                                    x: 0
+                                                    text: "+"
+                                                    background_color: (0, 0, 0, 0)
+                                                    color: (1, 1, 1, 1)
+                                                    font_size: 120
+                                                    canvas.before:
+                                                        Color:
+                                                            rgba: (1, .29, .655, 1) if self.state=='normal' else (.9, .1, .4, 1)
+                                                        RoundedRectangle:
+                                                            pos: self.pos
+                                                            size: self.size
+                                                            radius: [30,]
 
         Screen:
             name: "feiras"
@@ -2315,13 +2365,9 @@
         size_hint_y: 0.1
         spacing: 20
         BoxLayout:
-            size_hint_x: 0.2
             padding: 5
             Image: 
-                height: self.parent.height * .8
-                width: self.parent.height * .8
-                size_hint: None, None
-                pos: self.parent.pos
+                allow_stretch: True
                 source: "imagens/menu.png"
                 Botao:
                     pos: self.parent.pos
@@ -2332,16 +2378,11 @@
                         menu_proximas_entregas.atualizar()
                         menu_proximas_feiras.atualizar()
                         app.root.resetar_screenmanagers()
-                        app.show_notification()
             
         BoxLayout:
-            size_hint_x: 0.2
             padding: 5
             Image:
-                height: self.parent.height * .8
-                width: self.parent.height * .8
-                size_hint: None, None
-                pos: self.parent.pos
+                allow_stretch: True
                 source: "imagens/estoque.png"
                 Botao:
                     pos: self.parent.pos
@@ -2357,13 +2398,9 @@
                         app.root.resetar_screenmanagers()
             
         BoxLayout:
-            size_hint_x: 0.2
             padding: 5
             Image:
-                height: self.parent.height * .8
-                width: self.parent.height * .8
-                size_hint: None, None
-                pos: self.parent.pos
+                allow_stretch: True
                 source: "imagens/feiras.png"
                 Botao:
                     pos: self.parent.pos
@@ -2379,13 +2416,9 @@
                         app.root.resetar_screenmanagers()
             
         BoxLayout:
-            size_hint_x: 0.2
             padding: 5
             Image:
-                height: self.parent.height * .8
-                width: self.parent.height * .8
-                size_hint: None, None
-                pos: self.parent.pos
+                allow_stretch: True
                 source: "imagens/agenda.png"
                 Botao:
                     pos: self.parent.pos
@@ -2401,13 +2434,9 @@
                         app.root.resetar_screenmanagers()
             
         BoxLayout:
-            size_hint_x: 0.2
             padding: 5
             Image:
-                height: self.parent.height * .8
-                width: self.parent.height * .8
-                size_hint: None, None
-                pos: self.parent.pos
+                allow_stretch: True
                 source: "imagens/historico.png"
                 Botao:
                     pos: self.parent.pos
@@ -2425,13 +2454,9 @@
                         app.root.resetar_screenmanagers()
         
         BoxLayout:
-            size_hint_x: 0.2
             padding: 5
             Image:
-                height: self.parent.height * .8
-                width: self.parent.height * .8
-                size_hint: None, None
-                pos: self.parent.pos
+                allow_stretch: True
                 source: "imagens/financas.png"
                 Botao:
                     pos: self.parent.pos
@@ -2443,6 +2468,7 @@
                         scroll_financas_atual.atualizar()
                         scroll_financas_historico.atualizar()
                         app.root.resetar_screenmanagers()
+
 
 <Caixa_colecao>:
     background_color: (0, 0, 0, 0)
@@ -2554,6 +2580,11 @@
             size: self.size
             radius: [30,]
     
+    on_release: 
+        app.root.ids.scroll_imagens_subprodutos.id_subproduto = self.id_subproduto
+        app.root.ids.gerenciador_subprodutos.current = "imagens subprodutos"
+        app.root.ids.gerenciador_subprodutos.transition.direction = "down"
+        app.root.ids.scroll_imagens_subprodutos.atualizar()
     bold: True
     background_color: (0, 0, 0, 0)
     color: (1, 1, 1, 1)
@@ -3241,3 +3272,25 @@
             text: ""
             font_size: self.parent.height * .2
             bold: True
+
+<Caixa_imagens_subprodutos>:
+    height: 500
+    size_hint_y: None
+    AsyncImage:
+        id: imagem
+        size_hint_x: 0.8
+        Button:
+            background_color: 0, 0, 0, 0
+            pos: self.parent.pos
+            size: self.parent.size
+            on_release: app.root.copiar_imagem(self.parent)
+    
+    Button:
+        size_hint_x: 0.2
+        background_color: 0, 0, 0, 0
+        color: 0, 0, 0, 1
+        text: "x"
+        font_size: 120
+        bold: True
+        on_release: app.root.ids.scroll_imagens_subprodutos.excluir(self.parent.id)
+#
