Telas separadas em pastas

--- a/main.kv
+++ b/main.kv
@@ -1,9 +1,9 @@
-#: include menu.kv
-#: include estoque.kv
-#: include feiras.kv
-#: include agenda.kv
-#: include historico.kv
-#: include financas.kv
+#: include menu/menu.kv
+#: include estoque/estoque.kv
+#: include feiras/feiras.kv
+#: include agenda/agenda.kv
+#: include historico/historico.kv
+#: include financas/financas.kv
 
 <Geral>:
     orientation: 'vertical'
