--- a/feiras/feiras.kv
+++ b/feiras/feiras.kv
@@ -126,7 +126,7 @@
                         on_release: 
                             gerenciador_feiras.transition.direction = "up"
                             if spinner_feira_adicionar_subproduto.text != "•Escolha um subproduto" and quantidade_subproduto_feiras_adicionar.text.isnumeric(): gerenciador_feiras.current = "scroll_feiras_principal"
-                            if spinner_feira_adicionar_subproduto.text != "•Escolha um subproduto" and quantidade_subproduto_feiras_adicionar.text.isnumeric(): feiras_scroll.adicionar_produto(spinner_feira_adicionar_subproduto.text, quantidade_subproduto_feiras_adicionar.text)
+                            if spinner_feira_adicionar_subproduto.text != "•Escolha um subproduto" and quantidade_subproduto_feiras_adicionar.text.isnumeric(): feiras_scroll.adicionar_produto(spinner_feira_adicionar_colecao.text, spinner_feira_adicionar_produto.text, spinner_feira_adicionar_subproduto.text, quantidade_subproduto_feiras_adicionar.text)
         
 
         Screen:
@@ -684,7 +684,7 @@
             size: self.size
             radius: [30,]
 
-    width: (app.width) * .7
+    width: (app.width) * .8
     height: 200
     size_hint_y: None
     pos_hint: {'center_x':0.5}
@@ -701,7 +701,7 @@
         size_hint_x: .58
         halign: "center"
         bold: True
-        font_size: 60
+        font_size: 40
     
     Button:
         size_hint_x: .2
