Adicionado previsão do tempo e fonte adaptável

--- a/agenda/agenda.kv
+++ b/agenda/agenda.kv
@@ -441,22 +441,22 @@
                 Label:
                     id: data_agenda_caixa
                     
+                    font_size: app.ajustar_fonte(80, self.width * .8, self.text)
                     text: ""
-                    font_size: self.parent.height * .2
                     bold: True
 
                 Label:
                     id: nome_e_quantidade_subproduto_agenda_caixa
                     
+                    font_size: app.ajustar_fonte(80, self.width * .8, self.text)
                     text: ""
-                    font_size: self.parent.height * .2
                     bold: True
                 
                 Label:
                     id: preco_total_agenda_caixa
                     
+                    font_size: app.ajustar_fonte(80, self.width * .8, self.text)
                     text: ""
-                    font_size: self.parent.height * .2
                     bold: True
 
         BoxLayout:
