--- a/financas/financas.kv
+++ b/financas/financas.kv
@@ -461,28 +461,28 @@
         Label:
             id: nome_produto
             text: ""
-            font_size: 60
+            font_size: app.ajustar_fonte(60, self.width * .8, self.text)
             bold: True
             
         
         Label:
             id: local
             text: ""
-            font_size: 60
+            font_size: app.ajustar_fonte(60, self.width * .8, self.text)
             bold: True
             
         
         Label:
             id: preco
             text: ""
-            font_size: 60
+            font_size: app.ajustar_fonte(60, self.width * .8, self.text)
             bold: True
 
             
         Label:
             id: data
             text: ""
-            font_size: 60
+            font_size: app.ajustar_fonte(60, self.width * .8, self.text)
             bold: True
             
 
@@ -526,27 +526,27 @@
         Label:
             id: nome_produto
             text: ""
-            font_size: self.parent.height * .2
+            font_size: app.ajustar_fonte(60, self.width * .8, self.text)
             bold: True
             
         
         Label:
             id: local
             text: ""
-            font_size: self.parent.height * .2
+            font_size: app.ajustar_fonte(60, self.width * .8, self.text)
             bold: True
             
         
         Label:
             id: preco
             text: ""
-            font_size: self.parent.height * .2
+            font_size: app.ajustar_fonte(60, self.width * .8, self.text)
             bold: True
 
             
         Label:
             id: data
             text: ""
-            font_size: self.parent.height * .2
+            font_size: app.ajustar_fonte(60, self.width * .8, self.text)
             bold: True
 #
