--- a/historico/historico.kv
+++ b/historico/historico.kv
@@ -160,21 +160,21 @@
             Label:
                 id: data_historico_caixa
                 text: ""
-                font_size: 60
+                font_size: app.ajustar_fonte(60, self.width * .8, self.text)
                 
                 bold: True
 
             Label:
                 id: nome_e_quantidade_subproduto_historico_caixa
                 text: ""
-                font_size: 60
+                font_size: app.ajustar_fonte(60, self.width * .8, self.text)
                 
                 bold: True
             
             Label:
                 id: preco_total_historico_caixa
                 text: ""
-                font_size: 60
+                font_size: app.ajustar_fonte(60, self.width * .8, self.text)
                 
                 bold: True
             
@@ -182,7 +182,7 @@
                 id: metodo_de_pagamento
                 
                 text: ""
-                font_size: 60
+                font_size: app.ajustar_fonte(60, self.width * .8, self.text)
                 bold: True
 
         BoxLayout:
@@ -284,28 +284,28 @@
                     id: feiras_nome_subproduto_historico
                     
                     text: ""
-                    font_size: 60
+                    font_size: app.ajustar_fonte(60, self.width * .8, self.text)
                     bold: True
 
                 Label:
                     id: feiras_quantidade_produto_historico
                     
                     text: ""
-                    font_size: 60
+                    font_size: app.ajustar_fonte(60, self.width * .8, self.text)
                     bold: True
                 
                 Label:
                     id: preco_total_feira_historico
                     
                     text: ""
-                    font_size: 60
+                    font_size: app.ajustar_fonte(60, self.width * .8, self.text)
                     bold: True
                 
                 Label:
                     id: metodo_de_pagamento_historico_feira_produto
                     
                     text: ""
-                    font_size: 60
+                    font_size: app.ajustar_fonte(60, self.width * .8, self.text)
                     bold: True
 
             Button:
