--- a/estoque/estoque.kv
+++ b/estoque/estoque.kv
@@ -767,9 +767,9 @@
             radius: [30,]
     
     bold: True
+    font_size: app.ajustar_fonte(80, self.width * .8, self.text)
     background_color: (0, 0, 0, 0)
     color: (1, 1, 1, 1)
-    font_size: 80
     on_release: 
         app.root.ids.gerenciador_telas_principal.get_screen("estoque").ids.gerenciador_colecoes.transition.direction = "down"
         app.root.ids.gerenciador_telas_principal.get_screen("estoque").ids.scroll_produtos.atualizar(self.id_colecao)
@@ -810,8 +810,8 @@
     
     bold: True
     background_color: (0, 0, 0, 0)
+    font_size: app.ajustar_fonte(80, self.width * .8, self.text)
     color: (1, 1, 1, 1)
-    font_size: 80
     on_release: 
         app.root.ids.gerenciador_telas_principal.get_screen("estoque").ids.gerenciador_produtos.transition.direction = "down"
         app.root.ids.gerenciador_telas_principal.get_screen("estoque").ids.scroll_subprodutos.atualizar(self.id_produto)
@@ -858,6 +858,7 @@
     background_color: (0, 0, 0, 0)
     halign: "center"
     height: 250
+    font_size: app.ajustar_fonte(80, self.width * .8, self.text)
     canvas.before:
         Color:
             rgba: (1, 74 / 255, 167 / 255, 1) if self.state=='normal' else (0.9, .1, .4, 1)
@@ -874,7 +875,6 @@
     bold: True
     background_color: (0, 0, 0, 0)
     color: (1, 1, 1, 1)
-    font_size: 80
     AsyncImage:
         id: imagem_produto
         source: ""
