mudança de fonte automática e add total histórico

--- a/financas/financas.kv
+++ b/financas/financas.kv
@@ -526,27 +526,27 @@
         Label:
             id: nome_produto
             text: ""
-            font_size: app.ajustar_fonte(60, self.width * .8, self.text)
+            font_size: app.ajustar_fonte(60, self.width, self.text)
             bold: True
             
         
         Label:
             id: local
             text: ""
-            font_size: app.ajustar_fonte(60, self.width * .8, self.text)
+            font_size: app.ajustar_fonte(60, self.width, self.text)
             bold: True
             
         
         Label:
             id: preco
             text: ""
-            font_size: app.ajustar_fonte(60, self.width * .8, self.text)
+            font_size: app.ajustar_fonte(60, self.width, self.text)
             bold: True
 
             
         Label:
             id: data
             text: ""
-            font_size: app.ajustar_fonte(60, self.width * .8, self.text)
+            font_size: app.ajustar_fonte(60, self.width, self.text)
             bold: True
 #
