--- a/estoque/estoque.kv
+++ b/estoque/estoque.kv
@@ -810,7 +810,7 @@
     
     bold: True
     background_color: (0, 0, 0, 0)
-    font_size: app.ajustar_fonte(80, self.width, self.text)
+    font_size: app.ajustar_fonte(80, self.width * .8, self.text)
     color: (1, 1, 1, 1)
     on_release: 
         app.root.ids.gerenciador_telas_principal.get_screen("estoque").ids.gerenciador_produtos.transition.direction = "down"
@@ -858,7 +858,7 @@
     background_color: (0, 0, 0, 0)
     halign: "center"
     height: 250
-    font_size: app.ajustar_fonte(80, self.width, self.text)
+    font_size: app.ajustar_fonte(80, self.width * .8, self.text)
     canvas.before:
         Color:
             rgba: (1, 74 / 255, 167 / 255, 1) if self.state=='normal' else (0.9, .1, .4, 1)
