Arrumado tamanho de fonte relativo

--- a/agenda/agenda.kv
+++ b/agenda/agenda.kv
@@ -451,21 +451,21 @@
                 Label:
                     id: data_agenda_caixa
                     
-                    font_size: app.ajustar_fonte(80, self.width * .8, self.text)
+                    font_size: app.ajustar_fonte(80, self.width, self.text)
                     text: ""
                     bold: True
 
                 Label:
                     id: nome_e_quantidade_subproduto_agenda_caixa
                     
-                    font_size: app.ajustar_fonte(80, self.width * .8, self.text)
+                    font_size: app.ajustar_fonte(80, self.width, self.text)
                     text: ""
                     bold: True
                 
                 Label:
                     id: preco_total_agenda_caixa
                     
-                    font_size: app.ajustar_fonte(80, self.width * .8, self.text)
+                    font_size: app.ajustar_fonte(80, self.width, self.text)
                     text: ""
                     bold: True
 
