--- a/feiras/feiras.kv
+++ b/feiras/feiras.kv
@@ -740,7 +740,7 @@
         size_hint_x: .58
         halign: "center"
         bold: True
-        font_size: app.ajustar_fonte(50, self.width * .6, self.text)
+        font_size: app.ajustar_fonte(50, self.width, self.text)
         center: self.parent.center
     
     Button:
@@ -786,7 +786,7 @@
                     text: ""
                     center_x: self.parent.center_x
                     
-                    font_size: app.ajustar_fonte(60, self.width * .6, self.text)
+                    font_size: app.ajustar_fonte(60, self.width, self.text)
                     bold: True
 
                 Label:
@@ -794,7 +794,7 @@
                     
                     text: ""
                     center_x: self.parent.center_x
-                    font_size: app.ajustar_fonte(60, self.width * .6, self.text)
+                    font_size: app.ajustar_fonte(60, self.width, self.text)
                     bold: True
                 
                 Label:
@@ -802,7 +802,7 @@
                     
                     text: ""
                     center_x: self.parent.center_x
-                    font_size: app.ajustar_fonte(60, self.width * .6, self.text)
+                    font_size: app.ajustar_fonte(60, self.width, self.text)
                     bold: True
 
             Button:
